--- a/toDo.txt
+++ b/toDo.txt
@@ -1,7 +1,3 @@
-[] Add amp script
-    [x] Casino
-    [x] Blog
-    [] Review
-    [] Review-form
+[] Add globalDataMixin
 [] Внедрить getTranslate
 [] Изменить нейминг файлов
