Change naiming Breadcrumb

--- a/toDo.txt
+++ b/toDo.txt
@@ -1,3 +1,4 @@
+[] Вынести код data.body.currentUrl из asyncData headDataMixin
 [] Внедрить getTranslate
 [] Изменить нейминг файлов
 [] Faq component
